# mc-bot

./: .gitignore  README.md  bot.py  flake.nix  gcp.py  main.py  pyproject.toml  pyvenv.cfg  requirements.txt  servers.txt
src/mc_bot/: main.py
src/mc_bot/server/: servers.py
